Fix sponsor area alignment

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -203,6 +203,7 @@ hr {
 #sponsor-area {
     margin: 25px auto;
     padding: 10px;
+    text-align: center;
 }
 #sponsor-area h1 {
     margin: 20px 0 20px 0;
